tests/ui/shader/unannotated_field.rx
//@ spec: RXS-0154
struct VsOut {
    #[builtin(position)] pos: f32,
    uv: f32, //~ ERROR RX3011
}

vertex fn vs_main() -> VsOut {
    VsOut { pos: 0.0, uv: 0.0 }
}

fn main() {}
